1. Hotfix: Select the payment methods bug.