@@ -1,1 +1,2 @@
-1. Hotfix: Select the payment methods bug.
+1. Fixed issue with Markdown.
+2. Updated price formulas.
